--- a/package.json
+++ b/package.json
@@ -1,24 +1,16 @@
 {
   "name": "meat-api",
   "version": "1.0.0",
-  "description": "Api de Restaurantes",
+  "description": "API de restaurante",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/atozzini/meat-api.git"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/atozzini/meat-api/issues"
-  },
-  "homepage": "https://github.com/atozzini/meat-api#readme",
   "dependencies": {
-    "restify": "6.3.4"
+    "restify": "^11.0.0"
   },
   "devDependencies": {
     "@types/restify": "5.0.6"
