--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "dist",
-    "target": "ES2016",
-    "module": "commonjs"
+    "target": "es2015",
+    "module": "CommonJS"
   }
 }
