--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "meat-api",
   "version": "1.0.0",
-  "description": "API de restaurante",
+  "description": "API de Restaurantes",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "restify": "^11.0.0"
+    "restify": "6.3.4"
   },
   "devDependencies": {
     "@types/restify": "5.0.6"
